classDiagram
    class BaseQuestion {
        +str id
        +str topic
        +str difficulty
        +str text
    }

    class MCQQuestion {
        +List~str~ options
        +str correct_option
    }

    class QuestionAttempt {
        +MCQQuestion question
        +str chosen_option
        +bool is_correct
    }

    class QuizSession {
        +str id
        +str selected_topic
        +str selected_difficulty
        +List~MCQQuestion~ questions
        +List~QuestionAttempt~ attempts
        +datetime start_time
        +datetime end_time
        +int total_questions
        +int correct_count
        +int incorrect_count
        +float score_percentage
        +float duration_seconds
    }

    BaseQuestion <|-- MCQQuestion
    MCQQuestion --> QuestionAttempt : used by
    QuizSession "1" o-- "many" MCQQuestion : contains
    QuizSession "1" o-- "many" QuestionAttempt : records
